infrastructure/k3s/components/eureka-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-svc
  labels:
    app.kubernetes.io/name: eureka-server
    app.kubernetes.io/component: identity
    app.kubernetes.io/part-of: caicedo-seguros
    caicedo.seguros/tier: application
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9011"
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: eureka-server
  ports:
    - name: http
      port: 8761
      targetPort: http
      protocol: TCP
